extraction/parser.output
   0  $accept : %entry% $end

   1  integer_constant : IL_integer_constant
   2                   | IL_minus IL_integer_constant

   3  primary_expression : IL_ident
   4                     | integer_constant
   5                     | IL_lparen expression IL_rparen

   6  multiplicative_expression : multiplicative_expression IL_star primary_expression
   7                            | multiplicative_expression IL_div primary_expression
   8                            | primary_expression

   9  additive_expression : additive_expression IL_plus multiplicative_expression
  10                      | additive_expression IL_minus multiplicative_expression
  11                      | multiplicative_expression

  12  expression : expression IL_less_than additive_expression
  13             | additive_expression

  14  arguments :
  15            | ident_list

  16  ident_list : IL_ident
  17             | IL_ident IL_comma ident_list

  18  option_arglist : IL_lparen arguments IL_rparen

  19  fun_def : IL_ident option_arglist IL_equal expr

  20  fun_list : fun_def
  21           | fun_def IL_and fun_list

  22  expr : IL_let IL_ident IL_equal expression IL_in expr
  23       | IL_letrec fun_def IL_in expr
  24       | IL_if IL_ident IL_then expr IL_else expr
  25       | IL_ident option_arglist
  26       | IL_ident

  27  %entry% : '\001' expr

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . expr  (27)

	IL_if  shift 3
	IL_letrec  shift 4
	IL_let  shift 5
	IL_ident  shift 6
	.  error

	expr  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr : IL_if . IL_ident IL_then expr IL_else expr  (24)

	IL_ident  shift 8
	.  error


state 4
	expr : IL_letrec . fun_def IL_in expr  (23)

	IL_ident  shift 9
	.  error

	fun_def  goto 10


state 5
	expr : IL_let . IL_ident IL_equal expression IL_in expr  (22)

	IL_ident  shift 11
	.  error


state 6
	expr : IL_ident . option_arglist  (25)
	expr : IL_ident .  (26)

	IL_lparen  shift 12
	$end  reduce 26
	IL_else  reduce 26
	IL_in  reduce 26

	option_arglist  goto 13


state 7
	%entry% : '\001' expr .  (27)

	.  reduce 27


state 8
	expr : IL_if IL_ident . IL_then expr IL_else expr  (24)

	IL_then  shift 14
	.  error


state 9
	fun_def : IL_ident . option_arglist IL_equal expr  (19)

	IL_lparen  shift 12
	.  error

	option_arglist  goto 15


state 10
	expr : IL_letrec fun_def . IL_in expr  (23)

	IL_in  shift 16
	.  error


state 11
	expr : IL_let IL_ident . IL_equal expression IL_in expr  (22)

	IL_equal  shift 17
	.  error


state 12
	option_arglist : IL_lparen . arguments IL_rparen  (18)
	arguments : .  (14)

	IL_ident  shift 18
	IL_rparen  reduce 14

	arguments  goto 19
	ident_list  goto 20


state 13
	expr : IL_ident option_arglist .  (25)

	.  reduce 25


state 14
	expr : IL_if IL_ident IL_then . expr IL_else expr  (24)

	IL_if  shift 3
	IL_letrec  shift 4
	IL_let  shift 5
	IL_ident  shift 6
	.  error

	expr  goto 21


state 15
	fun_def : IL_ident option_arglist . IL_equal expr  (19)

	IL_equal  shift 22
	.  error


state 16
	expr : IL_letrec fun_def IL_in . expr  (23)

	IL_if  shift 3
	IL_letrec  shift 4
	IL_let  shift 5
	IL_ident  shift 6
	.  error

	expr  goto 23


state 17
	expr : IL_let IL_ident IL_equal . expression IL_in expr  (22)

	IL_integer_constant  shift 24
	IL_lparen  shift 25
	IL_minus  shift 26
	IL_ident  shift 27
	.  error

	integer_constant  goto 28
	primary_expression  goto 29
	expression  goto 30
	multiplicative_expression  goto 31
	additive_expression  goto 32


state 18
	ident_list : IL_ident .  (16)
	ident_list : IL_ident . IL_comma ident_list  (17)

	IL_comma  shift 33
	IL_rparen  reduce 16


state 19
	option_arglist : IL_lparen arguments . IL_rparen  (18)

	IL_rparen  shift 34
	.  error


state 20
	arguments : ident_list .  (15)

	.  reduce 15


state 21
	expr : IL_if IL_ident IL_then expr . IL_else expr  (24)

	IL_else  shift 35
	.  error


state 22
	fun_def : IL_ident option_arglist IL_equal . expr  (19)

	IL_if  shift 3
	IL_letrec  shift 4
	IL_let  shift 5
	IL_ident  shift 6
	.  error

	expr  goto 36


state 23
	expr : IL_letrec fun_def IL_in expr .  (23)

	.  reduce 23


state 24
	integer_constant : IL_integer_constant .  (1)

	.  reduce 1


state 25
	primary_expression : IL_lparen . expression IL_rparen  (5)

	IL_integer_constant  shift 24
	IL_lparen  shift 25
	IL_minus  shift 26
	IL_ident  shift 27
	.  error

	integer_constant  goto 28
	primary_expression  goto 29
	expression  goto 37
	multiplicative_expression  goto 31
	additive_expression  goto 32


state 26
	integer_constant : IL_minus . IL_integer_constant  (2)

	IL_integer_constant  shift 38
	.  error


state 27
	primary_expression : IL_ident .  (3)

	.  reduce 3


state 28
	primary_expression : integer_constant .  (4)

	.  reduce 4


state 29
	multiplicative_expression : primary_expression .  (8)

	.  reduce 8


state 30
	expression : expression . IL_less_than additive_expression  (12)
	expr : IL_let IL_ident IL_equal expression . IL_in expr  (22)

	IL_less_than  shift 39
	IL_in  shift 40
	.  error


state 31
	multiplicative_expression : multiplicative_expression . IL_star primary_expression  (6)
	multiplicative_expression : multiplicative_expression . IL_div primary_expression  (7)
	additive_expression : multiplicative_expression .  (11)

	IL_div  shift 41
	IL_star  shift 42
	IL_rparen  reduce 11
	IL_plus  reduce 11
	IL_minus  reduce 11
	IL_less_than  reduce 11
	IL_in  reduce 11


state 32
	additive_expression : additive_expression . IL_plus multiplicative_expression  (9)
	additive_expression : additive_expression . IL_minus multiplicative_expression  (10)
	expression : additive_expression .  (13)

	IL_plus  shift 43
	IL_minus  shift 44
	IL_rparen  reduce 13
	IL_less_than  reduce 13
	IL_in  reduce 13


state 33
	ident_list : IL_ident IL_comma . ident_list  (17)

	IL_ident  shift 18
	.  error

	ident_list  goto 45


state 34
	option_arglist : IL_lparen arguments IL_rparen .  (18)

	.  reduce 18


state 35
	expr : IL_if IL_ident IL_then expr IL_else . expr  (24)

	IL_if  shift 3
	IL_letrec  shift 4
	IL_let  shift 5
	IL_ident  shift 6
	.  error

	expr  goto 46


state 36
	fun_def : IL_ident option_arglist IL_equal expr .  (19)

	.  reduce 19


state 37
	primary_expression : IL_lparen expression . IL_rparen  (5)
	expression : expression . IL_less_than additive_expression  (12)

	IL_rparen  shift 47
	IL_less_than  shift 39
	.  error


state 38
	integer_constant : IL_minus IL_integer_constant .  (2)

	.  reduce 2


state 39
	expression : expression IL_less_than . additive_expression  (12)

	IL_integer_constant  shift 24
	IL_lparen  shift 25
	IL_minus  shift 26
	IL_ident  shift 27
	.  error

	integer_constant  goto 28
	primary_expression  goto 29
	multiplicative_expression  goto 31
	additive_expression  goto 48


state 40
	expr : IL_let IL_ident IL_equal expression IL_in . expr  (22)

	IL_if  shift 3
	IL_letrec  shift 4
	IL_let  shift 5
	IL_ident  shift 6
	.  error

	expr  goto 49


state 41
	multiplicative_expression : multiplicative_expression IL_div . primary_expression  (7)

	IL_integer_constant  shift 24
	IL_lparen  shift 25
	IL_minus  shift 26
	IL_ident  shift 27
	.  error

	integer_constant  goto 28
	primary_expression  goto 50


state 42
	multiplicative_expression : multiplicative_expression IL_star . primary_expression  (6)

	IL_integer_constant  shift 24
	IL_lparen  shift 25
	IL_minus  shift 26
	IL_ident  shift 27
	.  error

	integer_constant  goto 28
	primary_expression  goto 51


state 43
	additive_expression : additive_expression IL_plus . multiplicative_expression  (9)

	IL_integer_constant  shift 24
	IL_lparen  shift 25
	IL_minus  shift 26
	IL_ident  shift 27
	.  error

	integer_constant  goto 28
	primary_expression  goto 29
	multiplicative_expression  goto 52


state 44
	additive_expression : additive_expression IL_minus . multiplicative_expression  (10)

	IL_integer_constant  shift 24
	IL_lparen  shift 25
	IL_minus  shift 26
	IL_ident  shift 27
	.  error

	integer_constant  goto 28
	primary_expression  goto 29
	multiplicative_expression  goto 53


state 45
	ident_list : IL_ident IL_comma ident_list .  (17)

	.  reduce 17


state 46
	expr : IL_if IL_ident IL_then expr IL_else expr .  (24)

	.  reduce 24


state 47
	primary_expression : IL_lparen expression IL_rparen .  (5)

	.  reduce 5


state 48
	additive_expression : additive_expression . IL_plus multiplicative_expression  (9)
	additive_expression : additive_expression . IL_minus multiplicative_expression  (10)
	expression : expression IL_less_than additive_expression .  (12)

	IL_plus  shift 43
	IL_minus  shift 44
	IL_rparen  reduce 12
	IL_less_than  reduce 12
	IL_in  reduce 12


state 49
	expr : IL_let IL_ident IL_equal expression IL_in expr .  (22)

	.  reduce 22


state 50
	multiplicative_expression : multiplicative_expression IL_div primary_expression .  (7)

	.  reduce 7


state 51
	multiplicative_expression : multiplicative_expression IL_star primary_expression .  (6)

	.  reduce 6


state 52
	multiplicative_expression : multiplicative_expression . IL_star primary_expression  (6)
	multiplicative_expression : multiplicative_expression . IL_div primary_expression  (7)
	additive_expression : additive_expression IL_plus multiplicative_expression .  (9)

	IL_div  shift 41
	IL_star  shift 42
	IL_rparen  reduce 9
	IL_plus  reduce 9
	IL_minus  reduce 9
	IL_less_than  reduce 9
	IL_in  reduce 9


state 53
	multiplicative_expression : multiplicative_expression . IL_star primary_expression  (6)
	multiplicative_expression : multiplicative_expression . IL_div primary_expression  (7)
	additive_expression : additive_expression IL_minus multiplicative_expression .  (10)

	IL_div  shift 41
	IL_star  shift 42
	IL_rparen  reduce 10
	IL_plus  reduce 10
	IL_minus  reduce 10
	IL_less_than  reduce 10
	IL_in  reduce 10


Rules never reduced:
	fun_list : fun_def  (20)
	fun_list : fun_def IL_and fun_list  (21)


23 terminals, 13 nonterminals
28 grammar rules, 54 states
